feat: Member.updateRole() 및 AppConfig 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,3 +29,9 @@ logging.level:
 jasypt:
   encryptor:
     bean: jasyptStringEncryptor
+
+custom:
+  member:
+    rating:
+      senior:
+        min: 10
