docs: 작업 브랜치에서 cd 작동되는 문제 해결

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,5 +6,5 @@ spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://inhub-db.crnnmgwc6y1v.ap-northeast-2.rds.amazonaws.com:3306/inhub
-    username: inhub
-    password: in123414
+    username: ENC(nBycthJBNf3GPpxVasC/iQ==)
+    password: ENC(lu77uliC3cGLUhdAl/1yPSDQwStlnEnV)
