--- a/build.gradle
+++ b/build.gradle
@@ -56,10 +56,16 @@ dependencies {
 	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'
 }
 
+
 tasks.named('test') {
 	useJUnitPlatform()
 	systemProperty "jasypt.encryptor.password", project.getProperty("jasypt.encryptor.password")
 }
+
+jar{
+	enabled = false
+}
+
 
 // Query dsl: delete Q Class
 clean {
