--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -70,6 +70,12 @@ custom:
   site:
     baseUrl: http://localhost:8080
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info, prometheus
+
 cloud:
   aws:
     credentials:
