--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 	testImplementation 'io.findify:s3mock_2.13:0.2.6' // test
 
+	// stomp
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
 	// mail
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
