feat: 채팅 구현(임시 버전) (#147)
* feat: 채팅 1차 구현

* feat: STOMP 채팅 구현 완료 - 디자인 작업 및 약간의 로직 수정 필요

* design: 디자인 약간

--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,9 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 	testImplementation 'io.findify:s3mock_2.13:0.2.6' // test
 
+	// stomp
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.springframework.security:spring-security-messaging'
 
 	// mail
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
