feat : batch 기본ì설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ spring:
   profiles:
     default: dev
 
+
+
   mvc:
     hidden-method:
       filter:
@@ -12,6 +14,13 @@ spring:
     url: jdbc:mariadb://127.0.0.1:3306/in__dev?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=Asia/Seoul
     username: ENC(HIzHQ75JvxOgtkxajoqlEA==)
     password: ENC(37glGXQV2EiQ926e1Na6TVNN64bRwxlT)
+
+
+  batch:
+    jdbc:
+      initialize-schema: always
+
+
 
   security:
     oauth2:
