--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,16 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	set('springCloudVersion', "2022.0.2")
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+}
+
 dependencies {
 	// base
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // jpa
