--- a/build.gradle
+++ b/build.gradle
@@ -100,6 +100,9 @@ dependencies {
 
 	// markdown
 	implementation 'org.commonmark:commonmark:0.18.2'
+
+	// restTemplate
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 }
 
 
