--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -55,6 +55,9 @@ jasypt:
     bean: jasyptStringEncryptor
 
 custom:
+  api:
+    crawling: 49.50.172.208
+    crawling-local: localhost:8081
   member:
     rating:
       senior:
