--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,6 +60,9 @@ logging.level:
     orm.jdbc.bind: trace
 
 custom:
+  api:
+    crawling: 49.50.172.208
+    crawling-local: localhost:8081
   member:
     rating:
       senior:
